--- a/public/css/index-onecat.css
+++ b/public/css/index-onecat.css
@@ -47,7 +47,7 @@ body {
     padding: 12px;
 }
 /*======Cats=======*/
-.Cat {
+.cat {
     margin-bottom: 18px;
     display: flex;
     justify-content: space-between;
@@ -56,42 +56,42 @@ body {
     border: 1px solid var(--color1);
     box-shadow: 0 6px 5px 1px rgba(0, 0, 0, .2);
 }
-.Cat .Cat__right-animation {
+.cat__right-animation {
     opacity: 0;
 }
-.Cat:hover .Cat__right-animation {
+.cat:hover .cat__right-animation {
     opacity: 1;
     cursor: pointer;
 }
-.Cat__left {
+.cat__left {
     display: flex;
     align-items: center;
     gap: 2px;
 }
-.Cat__left-img {
+.cat__left-img {
     margin: 22px;
 }
-.Cat__left-text {
+.cat__left-text {
     display: flex;
     flex-direction: column;
     font-size: 24px;
     gap: 4px;
 }
-.Cat__left-kg {
+.cat__left-kg {
     display: flex;
     font-size: 16px;
     align-items: center;
 }
-.Cat__right {
+.cat__right {
     display: flex;
     align-items: flex-end;
     flex-direction: column-reverse;
     justify-content: space-between;
 }
-.Cat__right-animation {
+.cat__right-animation {
     margin: 11px;
 }
-.Cat__right-date {
+.cat__right-date {
     font-size: 12px;
     margin: 9px;
     margin-right: 13px;
