--- a/public/css/index-onecat.css
+++ b/public/css/index-onecat.css
@@ -10,7 +10,6 @@ body {
     font-family: "Roboto";
     font-weight: 400;
     background-color: var(--color2);
-
 } 
 .container {
     max-width: 768px;
@@ -29,13 +28,13 @@ body {
 .header__left {
     display: flex;
     align-items: center;
-    
 }
 .header__left-element {
     cursor: pointer;
     padding: 12px;
 }
 .header__left-text {
+    font-weight: 400;
     font-size: 24px;
 }
 .header__right {
