--- a/public/css/index-twocat.css
+++ b/public/css/index-twocat.css
@@ -2,22 +2,18 @@
     --color3: #332317;
     --color1: #A77C5D;
     --color2: #F4E8DE;
+    --color4: #A5A5A5;
     --main-background-color: #EDDACA;
     --header-background-color: #A77C5D;
 }
-html, body {
+body {
     font-family: "Roboto";
     font-weight: 400;
     background-color: var(--color2);
-    height: 100%;
 } 
-.wrapper {
-	min-height: 100%;
-    display: flex;
-    flex-direction: column;
-}
 .container {
     max-width: 768px;
+    margin: 0 auto;
 }
 .header {
     display: flex;
@@ -45,37 +41,38 @@ html, body {
     cursor: pointer;
     padding: 12px;
 }
+/*------main-------*/
 .main {
-    margin-top: 13px;
-    flex: 1 1 auto;
+    margin-top: 29px;
 }
-.table {
-    display: flex;
-}
-.info {
-    margin: 4px;
-}
-.info__indicators {
-    font-size: 20px;
-    margin: 10px;
-}
-.inf {
-    display: block;
-}
-.inf__data {
-    margin-top: 9px;
-    font-size: 16px;
-}
-._arrow {
-    display: flex; 
+dl {
+    display: grid;
+    grid-template-columns: 58px 110px;
+    gap: 10px;
+    grid-template-rows: 13px 38px 8px 42px;
+    justify-items: start;
     align-items: center;
 }
-.hr {
-    border: none;
-    color: var(--color1);
-    background-color: var(--color1);
-    height: 1px;
+dt {
+    font-size: 20px;
+    margin-left: 11px;
 }
+dd {
+    display: grid;
+    grid-template-columns: 46px 1px;
+    align-items: center;
+    font-size: 16px;
+}
+/*-------footer-----*/
+.footer {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--color2);
+    border-top: solid 1px var(--color1);
+}
+
 .footer__content {
     display: flex;
     justify-content: space-evenly;
@@ -87,7 +84,7 @@ html, body {
     font-size: 12px;
     margin: 13px 10px 10px 10px;
 }
-._text {
+._overview {
     margin: 0;
 }
 .footer__content-right {
@@ -97,6 +94,7 @@ html, body {
     font-size: 12px;
     margin: 13px 13px 0 0;
 }
-._text2 {
+._history {
     margin: 0;
+    color: var(--color4);
 }
